; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/utils/pice/module/extr_utils.c_EnablePassThrough.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/utils/pice/module/extr_utils.c_EnablePassThrough.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @EnablePassThrough() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i32, i32* %2, align 4
  %4 = call i32 @save_flags(i32 %3)
  %5 = call i32 (...) @cli()
  %6 = call i32 @inl(i32 3320)
  store i32 %6, i32* %1, align 4
  %7 = call i32 @outl(i32 -2147483568, i32 3320)
  %8 = call i32 @inl(i32 3324)
  %9 = or i32 %8, 32
  %10 = call i32 @outl(i32 %9, i32 3324)
  %11 = load i32, i32* %1, align 4
  %12 = call i32 @outl(i32 %11, i32 3320)
  %13 = load i32, i32* %2, align 4
  %14 = call i32 @restore_flags(i32 %13)
  ret void
}

declare dso_local i32 @save_flags(i32) #1

declare dso_local i32 @cli(...) #1

declare dso_local i32 @inl(i32) #1

declare dso_local i32 @outl(i32, i32) #1

declare dso_local i32 @restore_flags(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
